# qfs

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  Dockerfile.docs  LICENSE  README.md  ROADMAP-TICKETS.md  docker-compose.yml  go.mod  go.sum  install.sh  main.go  package-lock.json  package.json  rust-toolchain.toml
.agents/plugins/: marketplace.json
.claude-plugin/: marketplace.json
.claude/skills/: gmail-ftp  qfs  qfs-automation  qfs-chatwork  qfs-cloudflare  qfs-cookbook  qfs-cross-service  qfs-databases  qfs-faq  qfs-files  qfs-gdrive  qfs-git  qfs-github  qfs-gmail  qfs-slack
.github/workflows/: ci.yml  release.yml
.workaholic/RFDs/: 0001-cfs-architecture.md  0001-qfs-architecture.md
.workaholic/concerns/: 13-live-google-consent-round-trip-and.md  13-passphrase-prompt-once-per-invocation-limitation.md  170000-quality-gate-5-owner-live.md  append-era-duplicate-rows-persist-on.md  artifacts-repo-token-is-sealed-but.md  bearer-gated-non-loopback-reconcile-round.md  cd-into-a-blob-file-is.md  cf-live-203090-unimplemented-cf-and.md  console-bundle-pin-unset-live-serve.md  create-account-s-secret-reference-form.md  create-account-ships-the-core-two.md  declared-model-and-scheduling-follow-ups.md  definition-catalog-cp-clone-and-mv.md  duplicate-declaration-rows-still-resolve-oldest.md  extend-on-the-read-path-is.md  g1-read-over-post-spelling-required.md  g7-and-g8-parks-create-scoping.md  golden-anti-drift-crate-not-exercised.md  hard-break-bare-paths-can-no.md  index.md  live-chatwork-behavior-change-awaits-owner.md  live-only-providers-remain-outside-local.md  live-proof-of-the-session-case.md  live-provider-acceptance-still-needs-credentials.md  local-write-materialization-is-narrow.md  owner-attended-live-verification-backlog.md  policy-less-or-denied-job-re.md  postgres-mysql-declarations-for-the-declared.md  project-db-configuration-events-are-not.md  qfs-runtime-span-buffer-test-flakes.md  redirect-off-a-follow-url-is.md  remaining-owner-attended-live-rounds.md  scope-cuts-and-monitored-items.md  shared-connection-and-broker-connection-homing.md  slack-workspace-namespace-still-advertises-verb.md  sys-and-slack-do-not-describe.md  the-api-policy-row-gates-mcp.md  the-branch-safety-scanner-false-positives.md  the-carried-create-account-ships-the.md  the-config-comment-stripper-truncates-paths.md  (+4 more)
.workaholic/deployments/: github-release.md  index.md
.workaholic/missions/: index.md
.workaholic/release-notes/: index.md  work-20260629-110121.md  work-20260703-022500.md  work-20260703-055500.md  work-20260703-063000.md  work-20260703-194046.md  work-20260704-181053.md  work-20260705-015204.md  work-20260705-032203.md  work-20260706-175903.md  work-20260706-204906.md  work-20260707-025845.md  work-20260707-045409.md  work-20260707-180554.md  work-20260707-181519.md  work-20260709-023822.md  work-20260711-121525.md  work-20260712-015928.md  work-20260712-032443.md  work-20260712-114152.md  work-20260713-150833.md  work-20260713-185925.md  work-20260713-233938.md  work-20260714-111817.md  work-20260715-163500.md  work-20260715-205333.md  work-20260716-152000.md  work-20260718-201117.md  work-20260719-101118.md  work-20260721-183323.md  work-20260722-084645.md  work-20260722-084646.md
.workaholic/stories/: README.md  index.md  work-20260620-200140.md  work-20260622-230954.md  work-20260624-182641.md  work-20260624-210651.md  work-20260625-170038.md  work-20260628-000332.md  work-20260629-110121.md  work-20260702-012808.md  work-20260703-022500.md  work-20260703-055500.md  work-20260703-063000.md  work-20260703-153000.md  work-20260703-194046.md  work-20260704-181053.md  work-20260705-015204.md  work-20260705-032203.md  work-20260705-173620.md  work-20260706-175903.md  (+28 more)
crates/cfs/: Cargo.toml  build.rs
crates/cfs/src/: catalog.rs  cron.rs  describe.rs  docs.rs  lib.rs  main.rs  serve.rs  serve_builtins.rs  shell.rs  version.rs  watchtower.rs
crates/cmd/: Cargo.toml
crates/cmd/src/: lib.rs  redact.rs
crates/cmd/tests/: dep_direction.rs  e2e_cli.rs  e2e_serve.rs
crates/codec/: Cargo.toml
crates/codec/src/: convert.rs  lib.rs  nested.rs
crates/codec/tests/: codecs.rs
crates/core/: Cargo.toml
crates/core/src/: describe.rs  eval.rs  lib.rs  registry.rs  resolve.rs  security.rs
crates/core/src/ddl/: server.rs
crates/core/src/ddl/server/: tests.rs
crates/core/src/eval/: tests.rs
crates/core/src/resolve/: tests.rs
crates/core/src/stdlib/: scalar.rs  tests.rs
crates/driver/: Cargo.toml
crates/driver/src/: error.rs  lib.rs  path.rs
crates/driver/tests/: external_capabilities.rs
crates/http-core/: Cargo.toml
crates/http-core/src/: lib.rs
crates/http-core/tests/: single_source_redaction.rs
crates/lang/: Cargo.toml
crates/lang/src/: keywords.rs  lib.rs  reference.rs
crates/parser/: Cargo.toml
crates/parser/src/: ast.rs  grammar.rs  lib.rs  tests.rs
crates/plan/: Cargo.toml
crates/plan/src/: apply.rs  ids.rs  lib.rs  node.rs  plan.rs  preview.rs  server.rs  tests.rs
crates/plan/tests/: golden_preview.rs  purity_deps.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: batch.rs  bridge.rs  caps.rs  driver.rs  error.rs  interpreter.rs  lib.rs  observe.rs  outcome.rs  schedule.rs  txn.rs
crates/runtime/tests/: interpreter.rs  txn_commit.rs
crates/server/: Cargo.toml
crates/server/fixtures/: server_boot.cfs  watchtower.cfs
crates/server/src/: audit.rs  binding.rs  driver.rs  error.rs  lib.rs  lower.rs  mount.rs  runtime.rs  state.rs  tests.rs
crates/server/src/policy/: audit.rs  enforce.rs  gate.rs  grammar.rs  mod.rs  model.rs
crates/server/tests/: e2e_policy.rs
crates/skill/: Cargo.toml
crates/skill/assets/: SKILL.md
crates/skill/assets/examples/: github.cfs  slack.cfs  sql.cfs
crates/skill/src/: lib.rs
crates/skill/tests/: golden_corpus.rs
docs/: README.md  blueprint.md  drivers.md  index.md  language.md  query-cookbook.md  roadmap.md  server.md  showcase.md
fixtures/: watchtower.cfs
scripts/: check-no-live-credentials.sh
xtask/: Cargo.toml
xtask/src/: main.rs
(+979 files in other folders)
