[workspace]
resolver = "2"
# `crates/*` are production members. `spikes/*` are THROWAWAY t02 comparison
# evidence (publish = false), kept in the workspace so they build/fmt/clippy with
# the rest but never ship. See docs/adr/0001-parser-library.md.
members = ["crates/*", "spikes/*"]

[workspace.package]
edition = "2021"
rust-version = "1.96"
license = "MIT"
authors = ["a@qmu.jp"]
repository = "https://github.com/a-qmu-jp/gmail-ftp"

# Shared dependency versions. Members opt in via `dep = { workspace = true }`.
# Versions are caret-resolved against the pre-warmed cargo cache (A2 ground truth);
# do NOT pin older versions here.
[workspace.dependencies]
clap = { version = "4", features = ["derive"] }
thiserror = "2"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# Async runtime + combinators for the effect interpreter. tokio/futures are deliberately
# CONFINED to cfs-runtime (only that crate opts in) so cfs-plan's purity dep-closure test
# (which forbids tokio/async runtimes) stays green — the effect substrate stays I/O-free.
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "sync", "time"] }
futures = "0.3"
# `async fn` in the consumer-side ApplyDriver trait (object-safe `dyn ApplyDriver`).
# Confined to cfs-runtime alongside tokio.
async-trait = "0.1"

# Workspace-wide lints. Inherited by each member via `[lints] workspace = true`.
# The strict unwrap/expect/panic policy enforces the t01 "no unwrap/expect/panic in
# libs" rule structurally (Considerations / implementation policy). Test code is
# exempted per-crate with `#![cfg_attr(test, allow(...))]`.
[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
