[package]
name = "xtask"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "cfs build tooling (cargo-xtask pattern): gen-docs (anti-drift reference) + dist (release artifacts). NOT shipped in the binary."
# Build tooling — never published, never part of the shipped artifact (RFD §9).
publish = false

[[bin]]
name = "xtask"
path = "src/main.rs"

[dependencies]
# The xtask reuses the BINARY's own doc generator (anti-drift): it links `cfs` (the lib facet)
# and calls `cfs::docs::gen_docs` / `check_docs`, which render from the live describe registry.
# This is a path dep already in the workspace — it adds ZERO external crates (dep-light), and
# `cfs` is already compiled, so linking it here is cheap.
cfs = { path = "../crates/cfs" }

[lints]
workspace = true
