[package]
name = "cfs"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "cfs: the single binary (CLI + server) for the AI-driven, DSL-programmable multi-service control plane (RFD-0001)."

[[bin]]
name = "cfs"
path = "src/main.rs"

[dependencies]
cfs-cmd = { path = "../cmd" }
# t28 interactive shell: the binary is the ONE place that owns the runtime-coupled local read
# facet. It is an allowlisted `cfs-runtime` consumer AND a leaf (nothing depends on it), so the
# `cfs → cfs-driver-local → cfs-runtime` edge keeps tokio confined (it dead-ends in the leaf).
# Putting the adapter here — rather than in cfs-cmd — is what keeps cfs-cmd off both the runtime
# and the driver crates (the runtime-leaf-confinement guard would fire on a `cfs-cmd →
# cfs-driver-local` edge). The pure shell LOGIC stays in cfs-exec; the binary only wires the
# registries + REPL driver and injects them via cfs_cmd's ShellLauncher.
cfs-core = { path = "../core" }
cfs-exec = { path = "../exec" }
cfs-driver-local = { path = "../driver-local" }
cfs-pushdown = { path = "../pushdown" }
# t32 serve composition root: the binary (the terminal sink, the HTTP sibling of the t28 shell
# composition root) wires the HTTP serving binding (cfs-http). cfs-http is a LEAF that consumes
# cfs-server + the cfs-exec read executor + tokio; putting its composition here keeps cfs-cmd
# off cfs-exec/cfs-http and lets tokio dead-end in the terminal binary.
cfs-http = { path = "../http" }
# The serve composition builds a tokio runtime to drive the async listener + supervised wait.
tokio = { version = "1", default-features = false, features = ["rt", "rt-multi-thread", "signal", "macros"] }
async-trait = { workspace = true }

[dev-dependencies]
# Temp-dir fixtures for the shell's end-to-end local read tests (never touches user files).
tempfile = "3"

[lints]
workspace = true
