[package]
name = "cfs"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "cfs: the single binary (CLI + server) for the AI-driven, DSL-programmable multi-service control plane (RFD-0001)."

[[bin]]
name = "cfs"
path = "src/main.rs"

[dependencies]
cfs-cmd = { path = "../cmd" }
# t28 interactive shell: the binary is the ONE place that owns the runtime-coupled local read
# facet. It is an allowlisted `cfs-runtime` consumer AND a leaf (nothing depends on it), so the
# `cfs → cfs-driver-local → cfs-runtime` edge keeps tokio confined (it dead-ends in the leaf).
# Putting the adapter here — rather than in cfs-cmd — is what keeps cfs-cmd off both the runtime
# and the driver crates (the runtime-leaf-confinement guard would fire on a `cfs-cmd →
# cfs-driver-local` edge). The pure shell LOGIC stays in cfs-exec; the binary only wires the
# registries + REPL driver and injects them via cfs_cmd's ShellLauncher.
cfs-core = { path = "../core" }
cfs-exec = { path = "../exec" }
cfs-driver-local = { path = "../driver-local" }
# t39 `cfs describe` composition root: the binary owns the **describe-only** driver registry the
# subcommand consults. DESCRIBE is PURE (no creds, no I/O, no network), so each driver is built
# with its public, cred-free mock client (gmail/gdrive/github/slack/ga) or an empty registry
# (s3/r2 ObjRegistry) — only the introspective half (describe/capabilities/procedures/prelude/
# pushdown) is ever called. These are path-deps already in the workspace (no new external crates),
# and the binary is the allowlisted leaf that may carry the `cfs-driver-*` edges (cfs-cmd stays off
# them). sql/git/cf need a registered catalog/repo for describe (a registration requirement, not a
# cred one) and are covered by the cfs-skill golden corpus instead.
cfs-driver-gmail = { path = "../driver-gmail" }
cfs-driver-gdrive = { path = "../driver-gdrive" }
cfs-driver-github = { path = "../driver-github" }
cfs-driver-slack = { path = "../driver-slack" }
cfs-driver-ga = { path = "../driver-ga" }
cfs-driver-objstore = { path = "../driver-objstore" }
cfs-pushdown = { path = "../pushdown" }
# t32 serve composition root: the binary (the terminal sink, the HTTP sibling of the t28 shell
# composition root) wires the HTTP serving binding (cfs-http). cfs-http is a LEAF that consumes
# cfs-server + the cfs-exec read executor + tokio; putting its composition here keeps cfs-cmd
# off cfs-exec/cfs-http and lets tokio dead-end in the terminal binary.
cfs-http = { path = "../http" }
# t33 serve composition root: the binary ALSO wires the cron JOB scheduler binding (cfs-cron, a
# leaf consuming cfs-server + cfs-exec, the cron sibling of cfs-http). The binary builds the
# CronBinding + the binary-local JobStore + the committer + the native daemon loop here, so
# cfs-cron's feature-gated tokio dead-ends in the terminal binary and cfs-cmd stays off it. The
# `native` feature (default-on) is required for the CronBinding + RecordingCommitter + daemon.
cfs-cron = { path = "../cron" }
# t34 serve composition root: the binary ALSO wires the watchtower binding (cfs-watchtower, a leaf
# consuming cfs-server + cfs-exec, the watchtower sibling of cfs-http/cfs-cron). The binary builds
# the WatchtowerBinding + the shared LocalBus + the injected Committer + the dispatch loop here, and
# composes the webhook ingest into the cfs-http listener via a fallback closure (so cfs-watchtower
# serves no HTTP itself and neither leaf depends on the other). cfs-watchtower's feature-gated tokio
# (bus MPSC + watcher tasks) dead-ends in the terminal binary; cfs-cmd stays off it.
cfs-watchtower = { path = "../watchtower" }
# The shared secrets surface the watchtower resolves webhook signing secrets from (by handle).
cfs-secrets = { path = "../secrets" }
# t36 deployment host-adapter seam: the binary composes the daemon's TokioHost: RuntimeHost,
# REUSING the existing cfs-http/cfs-cron/cfs-watchtower serve composition behind the trait, and
# wires the fsync'd FileDurableStore + the on-disk AuditLedger. `host-daemon` is the EC2/Linux
# build feature (mutually exclusive with `host-workers`); it pulls cfs-host's cfs-server-backed
# conversion + daemon primitives. cfs-host is a leaf consumed only by this terminal binary.
cfs-host = { path = "../host", features = ["host-daemon"] }
# The serve composition builds a tokio runtime to drive the async listener + supervised wait.
tokio = { version = "1", default-features = false, features = ["rt", "rt-multi-thread", "signal", "macros"] }
async-trait = { workspace = true }
# Secret-free structured logging for the watchtower dispatch loop (the same target the serve
# bindings log under). No secrets ever logged (RFD §10).
tracing = { workspace = true }

[dev-dependencies]
# Temp-dir fixtures for the shell's end-to-end local read tests (never touches user files).
tempfile = "3"

[lints]
workspace = true
