[package]
name = "cfs-cmd"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "cfs command layer (RFD-0001 §7): clap-derive argv parsing dispatching run/serve/interactive shell into cfs-core. Logic-free w.r.t. the engine."

[dependencies]
# C4 / G5: cmd depends on cfs-core (the hub) and cfs-server (the serve arm) ONLY.
# It must NOT depend on cfs-lang / cfs-plan / cfs-driver / cfs-codec / cfs-parser
# directly — enforced by tests/dep_direction.rs.
cfs-core = { path = "../core" }
cfs-server = { path = "../server" }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }

[lints]
workspace = true
