[package]
name = "cfs-core"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "cfs shared engine glue (RFD-0001 §3/§6): the three open registries, the Engine/Session context, and re-exports of the trait seams + structured CfsError."

[dependencies]
cfs-driver = { path = "../driver" }
cfs-codec = { path = "../codec" }
cfs-lang = { path = "../lang" }
cfs-plan = { path = "../plan" }
# The canonical type & schema model (t05). A leaf crate; core re-exports it so the
# rest of the workspace sees one `cfs_core::Schema` / `Value` / `TypeError`.
cfs-types = { path = "../types" }
# Acceptance criterion C5 / E1 (ticket t06): the `cfs-core -> cfs-parser` edge is now
# WIRED — name resolution (`resolve`) consumes the parsed `cfs_parser::Statement` AST.
# One direction only: `cfs-parser` must never depend on `cfs-core` (cycle prevention,
# asserted by `cfs-cmd/tests/dep_direction.rs`).
cfs-parser = { path = "../parser" }

[lints]
workspace = true
