[package]
name = "cfs-lang"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "cfs closed-core language surface: the frozen reserved-keyword set (RFD-0001 §3). AST sum types land here in E1."

[dependencies]

[lints]
workspace = true
