[package]
name = "cfs-plan"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "cfs effect substrate: the typed effect-plan DAG (RFD-0001 §6). Effects-as-data; the interpreter is the only impure op (reserved for E2)."

[dependencies]

[lints]
workspace = true
