[package]
name = "cfs-runtime"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "cfs effect interpreter (RFD-0001 §3 COMMIT, §6 runtime): the sole impure stage. Walks a cfs-plan effect DAG in topological frontiers, auto-batches independent same-(driver,kind) effects into one driver call (Haxl-style), runs independent groups under bounded two-level concurrency, threads the applied-effect ledger, and honors PREVIEW vs COMMIT + irreversible/capability rules. tokio is CONFINED here so cfs-plan stays I/O-free."

[dependencies]
# Walks cfs-plan effect types only (Architect t07 guidance): NO cfs-core dependency
# (avoids a runtime -> core inversion), NO PlanSource. The runtime executes whatever
# effect-plan the evaluator hands it.
cfs-plan = { path = "../plan" }
# The capability gate re-check at apply time keys on the canonical DriverId from the
# leaf type crate (the same identity carried in every Target).
cfs-types = { path = "../types" }
# The transactional correctness envelope (t11): EffectKey idempotency, optimistic-
# concurrency preconditions, CommitStrategy selection, the saga/ACID executors, the
# audit ledger, and the RecoveryReport. Pure orchestration (no tokio of its own); the
# interpreter bridges its async ApplyDriver to cfs-txn's synchronous LegApplier seam.
cfs-txn = { path = "../txn" }
# Async runtime + synchronization for bounded parallelism. CONFINED to this crate so
# `cfs-plan`'s purity dep-closure test (which forbids tokio) stays green — the spine is
# cfs-runtime -> {cfs-plan, cfs-types}, and nothing depends back up onto cfs-runtime.
tokio = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
# Structured, machine-readable (AI-consumable) error/ledger DTOs and `-json` output.
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
# Per-group tracing spans (RFD §6 observability). Metadata only — never payloads/tokens.
tracing = { workspace = true }

[dev-dependencies]
cfs-types = { path = "../types" }
serde_json = { workspace = true }
# The tests drive the multi-threaded scheduler and a controllable mock driver; the
# `macros` + `rt-multi-thread` + `sync` + `time` features power `#[tokio::test]`,
# barriers, and timeout assertions.
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "sync", "time"] }
# The mock `ApplyDriver` in tests implements the async trait via the same macro.
async-trait = { workspace = true }
# Capture the interpreter's structured spans/events in tests to assert every applied-effect
# log line carries trace_id/plan_id/effect.id and is secret-free (RFD §6/§10 observability).
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[lints]
workspace = true
