[package]
name = "cfs-server"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "cfs server face (RFD-0001 §8): the server-IS-a-driver runtime. `cfs serve <config.cfs>` boots by replaying the config as /server writes through the same COMMIT path as a live write, and is itself reconfigurable through cfs. E7 sibling tickets plug HTTP/cron/webhook causes in behind the Binding seam."

[dependencies]
# The hub: Engine/Session, the Driver contract + Plan/commit/RowBatch/Value, and the
# re-exported ServerNode/ServerWriteOp plan coordinates (cfs-server depends on cfs-core
# only for these — it never reaches the runtime, so it stays consumable by cfs-cmd).
cfs-core = { path = "../core" }
# Boot parses the .cfs config into statements with the same parser the CLI uses. The
# cfs-core -> cfs-parser edge already exists; cfs-server consumes the AST directly to
# lower CREATE-DDL sugar and INSERT-INTO-/server writes into ServerConfigWrite plans.
cfs-parser = { path = "../parser" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
# The run loop blocks on ctrl_c then drains the audit sink. tokio is scoped to THIS
# crate (the server runtime) with only the rt + signal features it needs — cfs-server is
# NOT a cfs-runtime consumer (the /server writes are in-memory and apply through the pure
# cfs_plan::commit seam), so this does not pull the async interpreter into the spine.
tokio = { version = "1", default-features = false, features = ["rt", "signal", "macros"] }

[lints]
workspace = true
